--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,5 @@ jobs:
     - uses: pguyot/arm-runner-action@v2
       with:
         commands: |
-            bash ./StableInstall_RPiShinyServer
-            bash ./Uninstall_RPiShinyServer
+            bash StableInstall_RPiShinyServer.sh
+            bash Uninstall_RPiShinyServer.sh
